Fixes #180 -- Avatar is now floating left, so no line break wont wrap blow image.

--- a/pyconde/skins/ep14/static/assets/sass/_schedule.scss
+++ b/pyconde/skins/ep14/static/assets/sass/_schedule.scss
@@ -27,6 +27,8 @@
         img {
             border-radius: 50%;
             border: solid 5px $inputBorder;
+            float: left;
+            margin-right: 10px;
         }
         a {
             text-decoration: none;
